# lz78

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: config_util.hpp  file_util.hpp  lz77.hpp  lz77_kkp2.hpp  lz77_match.hpp  lz78.hpp  lz78_trie.hpp  suffix_tree.hpp
src/: lz77_parser.cpp  lz78_parser.cpp  main.cpp
